# oom-dcc

./: .gitignore  AGENTS.md  README.md  flake.nix  oom_agent_server_TODO.md  parms.json  pyproject.toml
.github/workflows/: arc-demo.yaml  ci.yaml  publish-runtime-container.yaml
dcc/oom-3de/: oom_load.py  oom_save.py  oom_startup.py
dcc/oom-nuke/: init.py  menu.py
dcc/oom-nuke/gizmos/: OOM_Read.gzind  OOM_Write.gzind  PQ-EDR_v101.gizmo
mcp-server/oom_agent/: __init__.py  _app.py  context.py  guardrails.py  hython_rpyc_worker.py  mcp_server.py  session_manager.py
mcp-server/oom_agent/tools/: __init__.py  _helpers.py  nodes.py  pipeline.py  scene.py  session.py
nix/: README.md  cli.nix  houdini.nix  mcp-env.nix  python-env.nix  runtime.nix  server.nix  sgtk.nix  uv-bundle.nix
ops/: test_container.sh
src/: README.md  oom_bootstrap.py  oom_context.py  oom_sg_auth.py  oom_sg_io.py  oom_sg_tk.py
src/oom_agent/: context.py  guardrails.py  image_pipeline.py  logging_config.py  mcp_client_example.py  mcp_server.py  protocol.py  server.py  session_manager.py
src/oom_agent/endpoints/: __init__.py  (+4 more)
src/oom_dcc/: __init__.py
src/oom_houdini/: PDG_PUBLISH_SCRIPTS  __init__.py  cook_top.py  cook_top_cli.py  image_load.py  oom_cache.py  oom_hou.py  oom_lop_publish.py  oom_renderpass.py  pdg_publish.py  sg_load.py  sg_template_utils.py  submit_pdg_cook.py  usd_load.py
src/oom_kube/: bubble.py  helpers.py
stubs/: hrpyc.pyi
tests/: houdini-pod-test.yaml  test_container.yaml  test_output_limits.py  test_rpyc_timeout.py
typings/sgtk/: __init__.pyi  bootstrap.pyi
(+20 files in other folders)
